Update Ionic Settings
Set Name, BundleID

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "Contract Manager",
+	"appId": "design.christianarp.contractly",
+	"appName": "Contractly",
 	"webDir": "build",
 	"bundledWebRuntime": false
 }
